app/assets/stylesheets/profiles.scss
// Place all the styles related to the profiles controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.filter-legend {
    margin-bottom: 10px;
    width: 305px;
}

.filter-button {
    display: inline-block;
    margin-left: 1.8vw;
    margin-bottom: 1vh;
}

.hidden-search-field {
    display: none;
}

.results-container {
    padding-top: 10px;
    margin-bottom: 10px;
}

.search-field {
    width: 305px;
}

.preference-instructions {
    font-size: 0.8em;
    text-align: center;
}

.profile-header {
    text-align: center;
    font-weight: 700;
    font-size: 32px;
    padding: 10px;
}

.profile-result {
    margin-top: 15px;
    margin-bottom: 15px;
}

.profile-container {
    margin-top: 15px;
    margin-bottom: 20px;
}

.edit-field-title {
    padding-left: 0.5vw;
}

.edit-field-body {
    padding-left: 0.5vw;
    margin-bottom: 0px;
}

// Preference Dropdown Styles
.dropdown-pref {
    padding: 2px 8px;
    float: right;
    margin-top: 0.5vh;
}

.dropdown-tooltip .tooltip-inner { 
    color: #FFFFFF; 
    padding: 10px;
    font-size: 16px;
    width: 400px;
    background-color: #31708f;
}

.tooltip.dropdown-tooltip {
    z-index: 999999;
}

.tooltip.right > .tooltip-arrow {
    border-right-color: #31708f;
}

.basic-info {
    padding-left: 1vw;
}

.category {
    display: inline;
    width: 300px;
    text-align: left;
}

.answer {
    display: inline;
    width: 200px;
    text-align: left;
}

.age-field {
    width: 5vw;
}

.edit-profile-btn {
    margin-top: -5vh;
}

.search-scroll {
	height: 90vh;
	overflow: auto;
}

.results-scroll {
	height: 82vh;
	overflow: auto;
}

.result-names {
}

.row.profile-item {
    margin-left: 0;
    margin-right: 0;
}

.all-online {
	display: inline;
}

#slider-range {
    width: 75%;
    margin-left: 1.5vw;
}

#sort-dropdown {
	display: inline;
	float: right;
	margin-top: -2vh;
}

.profile-item {
    padding-left: 1vw;
}

.status-text {
	margin-left: 11px;
	font-size: 0.85em;
	color: rgba(0, 0, 0, 0.38);
}

.fa-pencil {
    cursor: pointer;
}

.mini-descriptor {
    font-size: 80%;
}

.users-found {
	display: inline;
	float: right;
	font-size: 16px;
	color: #373D3F;
	margin-top: 1vh;
}

// Pagination links
.pagination {
	padding: 3px; 
	width: 100%;
	margin: 0 auto;
	margin-top: 2vh;
	margin-bottom: 2vh;
	font-size: 85%;
	text-align: center;
	position: relative;
	/*border: 1px solid rgba(0, 0, 0, 0.38);*/
} 

.pagination a, 
.pagination span, 
.pagination em {
	text-decoration: none;
	color: #31708f;
    background: #fcd68a;
    margin-right: 5px;
    display: inline-block;
    padding: 8px 20px;
    font-weight: 900;
    font-size: 15px;
    letter-spacing: -0.02em;
    text-shadow: none;
    border: none;
    -webkit-transition: all 200ms ease-in;
    line-height: 28px;
    -webkit-font-smoothing: antialiased;
    font-family: 'Lato', sans-serif;
    cursor: pointer;
}

.pagination a:hover, .pagination a:active {
	background-color: #31708f;
    color: #fcd68a;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    -webkit-transition: all 100ms ease-in;
} 

.pagination .current { 
	font-weight: bold;
	background: #fff;
    color: #333333;
    border: 1px solid #CCCCCC;
    cursor: default;
} 

.pagination span.disabled {
	color: rgba(0, 0, 0, 0.38);
}

.icon-cog {
  color: #2F4F4F;
}

